--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Track Important Dates</title>
+    <title>Track Important Dates Easy</title>
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <style> body { padding-top: 60px;} </style>
     <%= javascript_include_tag "application" %>
@@ -16,7 +16,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Track Important Dates Easy!</a>
+          <a class="brand" href="#">Track Important Dates Easy</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="<%= root_path %>">Home</a></li>
